--- a/main.html
+++ b/main.html
@@ -4,10 +4,20 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="card"> 
+		<img src="https://images.unsplash.com/photo-1722192258437-3feacfbdc115?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="rose tree image"  >
+		<h1 id="titleId">Pricing Card</h1>
+		<p>Price: Rs.200 <br>
+		Description: Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+		</p>
+		<button id="btn">Buy Now</button>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
